# tcp-channel-client

./: CLAUDE.md  Cargo.toml  README.md
src/: error.rs  lib.rs
tests/: integration.rs
