[package]
name = "tcp-channel-client"
version = "0.4.3"
authors = ["yi lu <luyikk@126.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/luyikk/tcpclient"
documentation = "https://docs.rs/tcpclient"
description = "Asynchronous tcpclient based on aqueue actor."


[dependencies]
log = "0.4"
tokio = { version = "1", features = ["rt", "net", "io-util", "time"] }
anyhow = "1.0"
async-channel = "2.1.1"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "net", "io-util", "macros", "sync", "time"] }
anyhow = "1.0"